# sentry-rs

./: Cargo.toml  README.md  SECURITY.md  example.env
src/: main.rs
src/cmds/: avatar.rs  hello.rs  math.rs  mod.rs  ping.rs  roll.rs
